# searchandrec

./: README.md  main.py  product.json  pyproject.toml
app/: config.py  main.py
app/api/routes/: search.py
app/src/: ranking_algorithm.py
db-utils/: database_setup.py
routes/: search.py
src/: generate_embeddings.py
