[tool.poetry]
name = "searchandrec"
version = "0.1.0"
description = "Search and Recommendation Tool"
authors = ["Your Name <you@example.com>"]
license = "CCO"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "0.111.0"
sentence-transformers = "3.0.1"
pymongo = "4.8.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
